--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="card-container">
       <div id="card-front" class="card-face active">
         <h1 class="great-vibes">Merry Christmas,</h1>
-        <h1 class="great-vibes">[Tên Người Nhận]</h1>
+        <h1 class="great-vibes">Ly Na</h1>
         <p class="playfair-display">Bạn có một thông điệp đặc biệt đang chờ.</p>
         <button id="open-card-button" class="cta-button">Mở Thiệp</button>
       </div>
@@ -33,7 +33,8 @@
         <p class="playfair-display message-body">
           Tôi biết dạo này người ta khá bận rộn. Nhưng nếu người ta có thời
           gian, tôi rất muốn mời người ta đi chơi Noel cùng tôi. Chúng ta có thể
-          cùng nhau đi ăn, xem phim, đi dạo,... bất cứ điều gì người ta thích.
+          cùng nhau đi ăn, xem phim, đi dạo,... bất cứ điều gì người ta muốn
+          (Hãy nói cho tôi biết nhé!).
         </p>
 
         <p class="playfair-display message-closing">
@@ -56,12 +57,6 @@
           Hy vọng ta sẽ có ảnh để thay cái ảnh này sớm nhé! Hãy cho tôi biết câu
           trả lời nhé !
         </p>
-        <button
-          class="cta-button final-action-button"
-          onclick="alert('Anh đã nhận được phản hồi của em! Sẽ liên hệ lại ngay nhé ❤️');"
-        >
-          Chấp Nhận Lời Mời
-        </button>
       </div>
     </div>
 
