--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tấm Thiệp Phép Thuật Noel ✨</title>
+    <title>Magic Letter ✨</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&display=swap"
@@ -27,14 +27,14 @@
 
         <p class="playfair-display message-intro">
           Noel này tôi đã gửi điều ước tới Santa Claus, và điều ước duy nhất của
-          tôi là được thấy nụ cười lấp lánh kia.
+          tôi là được thấy nụ cười lấp lánh của ai đó.
         </p>
 
         <p class="playfair-display message-body">
           Tôi biết dạo này người ta khá bận rộn. Nhưng nếu người ta có thời
           gian, tôi rất muốn mời người ta đi chơi Noel cùng tôi. Chúng ta có thể
           cùng nhau đi ăn, xem phim, đi dạo,... bất cứ điều gì người ta muốn
-          (Hãy nói cho tôi biết nhé!).
+          (Hãy nói cho tôi biết nhé! ).
         </p>
 
         <p class="playfair-display message-closing">
@@ -54,7 +54,7 @@
         </div>
 
         <p class="playfair-display final-words">
-          Hy vọng ta sẽ có ảnh để thay cái ảnh này sớm nhé! Hãy cho tôi biết câu
+          Hy vọng ta sẽ có ảnh để thay cái ảnh này sớm ! Hãy cho tôi biết câu
           trả lời nhé !
         </p>
       </div>
