--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
     <footer id="custom-signature">
       <p>Được tạo bởi <strong>Dĩ Khang</strong></p>
     </footer>
+    <audio id="christmas-music" loop preload="auto">
+      <source src="./assets/music.mp3" type="audio/mpeg" />
+    </audio>
   </body>
   <script src="script.js"></script>
 </html>
